# travel-data-platform

./: .flake8  .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_ci_tests_locally.sh  run_data_cleaner.py  run_data_generator.py  run_faker_data_generator.py  run_raw_data_generator.py  setup_gcp_resources.py
.github/workflows/: README.md  data-pipeline-cd.yml  data-pipeline-ci.yml  data-quality-checks.yml
junit/: test-results.xml
junit/scrapping_dest_details/: test-results.xml
pipelines/common/: README.md  __init__.py  gcp_auth.py  setup_credentials.py
pipelines/scrapping_dest_details/: .coverage  README.md  __init__.py  bigquery_loader.py  config.py  fetcher.py  gcs_storage.py  pipeline.py  requirements-dev.txt  requirements.txt
pipelines/scrapping_dest_details/tests/: __init__.py  config_test.py  conftest.py  dry_run_config.py  pytest.ini  run_tests.py  test_bigquery_loader.py  test_fetcher.py  test_gcs_storage.py  test_pipeline.py  test_schema_validation.py
pipelines/trips_data/: README.md  __init__.py  bigquery_ingestion.py  config.py  data_cleaner.py  data_generator.py  faker_data_generator.py  pipeline.py  raw_data_generator.py  scheduler.py
pipelines/weather_api_pipeline/: README.md  __init__.py  bigquery_loader.py  config.py  fetcher.py  gcs_storage.py  pipeline.py  requirements.txt
pipelines/weather_api_pipeline/tests/: test_fetcher.py
