[project]
name = "travel-data-platform"
version = "0.1.0"
description = "Data platform for travel data processing and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "google-cloud-bigquery>=3.11.4",
    "schedule>=1.2.0",
    "faker>=18.4.0",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipelines"]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

# isort configuration compatible with Black
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# flake8 configuration to match Black
[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv"
]
